--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
         {
             "path": "/api/cron/reminder",
             "schedule": "0 10 */2 * *"
+        },
+        {
+            "path": "/api/cron/vote-reminder",
+            "schedule": "0 10 * * *"
         }
     ]
 }
