--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,12 @@
-{}
+{
+    "crons": [
+        {
+            "path": "/api/cron/reminder",
+            "schedule": "0 18 */2 * *"
+        },
+        {
+            "path": "/api/cron/vote-reminder",
+            "schedule": "0 12 * * 1,4"
+        }
+    ]
+}
